Significant API impl cleanup & refactoring:
* Implemented first phase of taking a turn
* Added GameManager class
* Added Contestant class
* Refactored Game methods so they work with both Game-driven (sync) and API-driven (async) play
* Added optional UUIDs to Player and Game classes (used when invoked from GameManager)
* Rewrote API to use GameManager rather than hacky global dicts :)
* Changed IDs from int to (string-form) UUIDs
